protocols/tests/inverters/inverter_d0.out
error: Cannot assign to forbidden input 'a' after observing a combinationally dependent output
  ┌─ inverters/inverter_d0.prot:7:12
  │
7 │   DUT.a := DUT.s;
  │            ^^^^^ Cannot assign to forbidden input 'a' after observing a combinationally dependent output

